# bibPublish

./: .gitignore  README.rst  bibPublish.py  entry.py  pyproject.toml  setup.py
scripts/: bibPublish.py  publish.py
src/bibPublish/: __init__.py  entry.py  template.py
src/bibPublish.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/bibPublish/template/wordpress/: __init__.py  article-entry.tmpl  unpublished-entry.tmpl
src/bibPublish/template/wordpress-old/: abstract.html  book-entry.html  config.json  phdthesis-entry.html
src/bibPublish/templates/latex/: __init__.py
src/bibPublish/templates/snf/: __init__.py
src/bibPublish/templates/wordpress/: __init__.py  abstract.tmpl  article-entry.tmpl  book-entry.tmpl  head.tmpl  incollection-entry.tmpl  inproceedings-entry.tmpl  mastersthesis-entry.tmpl  phdthesis-entry.tmpl  unpublished-entry.tmpl
src/bibPublish/templates/wordpress-old/: mastersthesis-entry.html
src/bibpublish/: cli.py  entry.py  template.py
src/bibpublish/templates/latex/: __init__.py
src/bibpublish/templates/snf/: __init__.py
src/bibpublish/templates/web/: __init__.py
src/bibpublish/templates/wordpress/: __init__.py  abstract.tmpl
template/: formatter.py
template/wordpress/: config.json  incollection-entry.html  inproceedings-entry.html
