[project]
name = "bibpublish"
version = "1.0.2"
description = "bibpublish - publishes bibTex bibliographies."
authors = [
    { name = "Albert Weichselbraun", email = "albert@weichselbraun.net" }
]
license = { text = "GPL-3.0" }
readme = "README.md"
keywords = ["bibPublish", "bibtex", "publish"]
requires-python = ">=3.12"
dependencies = [
    "bibtexparser>=1.4.2,<2",
]

[project.urls]
Homepage = "http://github.com/AlbertWeichselbraun/bibPublish"
Repository = "http://github.com/AlbertWeichselbraun/bibPublish"

[project.scripts]
bibpublish = "bibpublish.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bibpublish"]

# code formatting with ruff
[tool.ruff]
line-length = 88
target-version = "py312"
include = ["src/**", "tests/**", "benchmarking/**", "examples/**"]
exclude = ["*.html", "*.json", "*.txt", "*.tmpl"]

[tool.ruff.format]
